leptos_macro/tests/ui/view/children_projection_error_slot_version.stderr
error[E0525]: expected a closure that implements the `Fn` trait, but this closure only implements `FnOnce`
  --> tests/ui/view/children_projection_error_slot_version.rs:29:17
   |
29 | /                 <Inner>
30 | |                     <Inmost name=name.clone() />
   | |                                  ---- closure is `FnOnce` because it moves the variable `name` out of its environment
31 | |                 </Inner>
   | |                        ^
   | |                        |
   | |________________________this closure implements `FnOnce`, not `Fn`
   |                          the requirement to implement `Fn` derives from here
   |
   = note: required for `Rc<dyn std::ops::Fn() -> Fragment>` to implement `ToChildren<{closure@$DIR/tests/ui/view/children_projection_error_slot_version.rs:29:17: 31:25}>`
